# FastFourierTransform

./: .gitignore  CMakeLists.txt  FFT_Multiplyer.cpp  FFT_Multiplyer.h  FileMode.cpp  FileMode.h  MultiplyMode.cpp  MultiplyMode.h  NumParser.cpp  NumParser.h  NumWriter.cpp  NumWriter.h  README.md  main.cpp
